resources/bookinfo-peerauthentication.yml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: bookinfo-peerauthentication
spec:
  mtls:
    mode: STRICT
